--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         <div class="project-list">
             <div class="project-card">
                 <div class="project-card-image">
-                    <img src="/qr-code-component-main/preview.jpg" alt="project-image" />  
+                    <img src="./qr-code-component-main/preview.jpg" alt="project-image" />  
                 </div>
                 <div class="project-card-content">
                     <h2>QR Code Component</h2>
                     <a href="./qr-code-component-main/index.html">Project Link <span>&neArr;</span></a>
                 </div>
             </div>
+            
             
         </div>
     <script src="script.js"></script>
