--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -90,7 +90,7 @@
       <div class="container">
         <div class="card">
           <div class="card-image">
-            <img src="/qr-code-component-main/images/image-qr-code.png" alt="qr code image" />
+            <img src="./images/image-qr-code.png" alt="qr code image" />
           </div>
           <div class="card-content">
             <h1>Improve your front-end skills by building projects</h1>
