add: Blog Preview Card Challenge

--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -73,12 +73,14 @@
         max-width: 80%;
         margin: 0 auto;
       }
+      footer{
+        position: fixed;
+        width: 100%;
+        bottom: 10px;
+      }
       .attribution {
         font-size: 11px;
         text-align: center;
-        position: fixed;
-        bottom: 10px;
-        width: 100%;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -104,11 +106,13 @@
 
     </main>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Divyansh Pingle</a>.
-    </div>
+        >. Coded by <a href="#">Divyansh Pingle</a>.
+      </div>
+    </footer>
   </body>
 </html>
