add: Social Links Profile Challenge

--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -175,7 +175,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-        >. Coded by <a href="#">Divyansh Pingle</a>.
+        >. Coded by <a href="https://github.com/iconicxdivyansh">Divyansh Pingle</a>.
       </div>
     </footer>
 </body>
