--- a/index.html
+++ b/index.html
@@ -138,6 +138,17 @@
                     </div>
                 </div>
             </div>
+            <div class="project-card">
+                <div>
+                    <div class="project-card-image">
+                        <img src="./recipe-page-main/preview.jpg" fetchpriority="high" alt="project-image" />
+                    </div>
+                    <div class="project-card-content">
+                        <h2>Recipe Page</h2>
+                        <a href="./recipe-page-main/index.html">Project Link <span>&neArr;</span></a>
+                    </div>
+                </div>
+            </div>
             
             
         </div>
