--- a/index.html
+++ b/index.html
@@ -149,6 +149,17 @@
                     </div>
                 </div>
             </div>
+            <div class="project-card">
+                <div>
+                    <div class="project-card-image">
+                        <img src="./product-preview-card-component-main/design/desktop-preview.jpg" fetchpriority="high" alt="project-image" />
+                    </div>
+                    <div class="project-card-content">
+                        <h2>Product Preview Card</h2>
+                        <a href="./product-preview-card-component-main/index.html">Project Link <span>&neArr;</span></a>
+                    </div>
+                </div>
+            </div>
             
             
         </div>
