--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -130,7 +130,7 @@
 
   </style>
 </head>
-<body class="global-resets">
+<body class="">
   <main>
   <div class="container centered">
     <div class="card">
