--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -40,11 +40,15 @@
         display: flex;
         flex-direction: column;
         background: rgb(252, 232, 224);
+        padding: 0;
+        margin: 0;
+        position: relative;
       }
       .container {
         max-width: 500px;
         background: var(--white);
       }
+
       article h1,
       h3 {
         font-family: "Young Serif", serif;
@@ -135,13 +139,18 @@
       }
       footer {
         background: var(--stone-150);
-        position: relative;
-        bottom: 6px;
+        position: absolute;
+        bottom: 0px;
       }
 
       @media screen and (min-width: 600px) {
+        body{
+          padding: 1rem;
+          margin:1rem;
+        }
         .container {
           padding: 1.5rem;
+          border-radius: 16px;
         }
         .article-image img {
           border-radius: 12px;
@@ -149,7 +158,7 @@
       }
     </style>
   </head>
-  <body class="centered global-resets">
+  <body class="centered ">
     <main>
       <div class="container centered">
         <article class="flex-column centered">
