--- a/index.html
+++ b/index.html
@@ -171,7 +171,17 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="project-card">
+                <div>
+                    <div class="project-card-image">
+                        <img src="./testimonials-grid-section-main/preview.jpg" fetchpriority="high" alt="project-image" />
+                    </div>
+                    <div class="project-card-content">
+                        <h2>Testimonials Grid Section</h2>
+                        <a href="./testimonials-grid-section-main/index.html">Project Link <span>&neArr;</span></a>
+                    </div>
+                </div>
+            </div>
             
         </div>
     <script src="script.js"></script>
