(add): order summary card Challenge

--- a/index.html
+++ b/index.html
@@ -182,6 +182,17 @@
                     </div>
                 </div>
             </div>
+            <div class="project-card">
+                <div>
+                    <div class="project-card-image">
+                        <img src="./order-summary-component-main/preview.jpg" fetchpriority="high" alt="project-image" />
+                    </div>
+                    <div class="project-card-content">
+                        <h2>Order Summary Component</h2>
+                        <a href="./order-summary-component-main/index.html">Project Link <span>&neArr;</span></a>
+                    </div>
+                </div>
+            </div>
             
         </div>
     <script src="script.js"></script>
