--- a/index.html
+++ b/index.html
@@ -193,6 +193,17 @@
                     </div>
                 </div>
             </div>
+            <div class="project-card">
+                <div>
+                    <div class="project-card-image">
+                        <img src="./3-column-preview-card-component-main/preview.jpg" fetchpriority="high" alt="project-image" />
+                    </div>
+                    <div class="project-card-content">
+                        <h2>3 Column Preview Card</h2>
+                        <a href="./3-column-preview-card-component-main/index.html">Project Link <span>&neArr;</span></a>
+                    </div>
+                </div>
+            </div>
             
         </div>
     <script src="script.js"></script>
