(add): faq-accordian challenge

--- a/index.html
+++ b/index.html
@@ -215,6 +215,17 @@
                     </div>
                 </div>
             </div>
+            <div class="project-card">
+                <div>
+                    <div class="project-card-image">
+                        <img src="./faq-accordion-main/preview.jpg" fetchpriority="high" alt="project-image" />
+                    </div>
+                    <div class="project-card-content">
+                        <h2>FAQ Accordion</h2>
+                        <a href="./faq-accordion-main/index.html">Project Link <span>&neArr;</span></a>
+                    </div>
+                </div>
+            </div>
             
         </div>
     <script src="script.js"></script>
