(add): interactive rating component challenge

--- a/index.html
+++ b/index.html
@@ -227,6 +227,18 @@
                 </div>
             </div>
             
+            <div class="project-card">
+                <div>
+                    <div class="project-card-image">
+                        <img src="./interactive-rating-component-main/preview.jpg" fetchpriority="high" alt="project-image" />
+                    </div>
+                    <div class="project-card-content">
+                        <h2>Interactive Rating Component</h2>
+                        <a href="./interactive-rating-component-main/index.html">Project Link <span>&neArr;</span></a>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     <script src="script.js"></script>
 </body>
